# simplicity-dex

./: .gitignore  Cargo.toml  Guide.md  Makefile  README.md  Readme.md
.simplicity-dex.example/: .simplicity-dex.config.toml  keypair.txt  relays.txt
crates/cli-client/: Cargo.toml
crates/cli-client/src/: config.rs  error.rs  explorer.rs  fee.rs  main.rs  metadata.rs  price_fetcher.rs  signing.rs  sync.rs  wallet.rs
crates/cli-client/src/cli/: basic.rs  browse.rs  commands.rs  common.rs  helper.rs  interactive.rs  maker.rs  mod.rs  option.rs  option_offer.rs  positions.rs  price.rs  swap.rs  sync.rs  tables.rs  taker.rs  tx.rs  wallet.rs
crates/coin-selection/: Cargo.toml
crates/coin-selection/migrations/: 20251204084835_init.sql
crates/coin-selection/src/: lib.rs  sqlite_db.rs  types.rs  utils.rs
crates/coin-selection/tests/: testing_sqlite_db.rs  utils.rs
crates/coin-selection/tests/fixtures/: default_outpoints.sql
crates/coin-store/: Cargo.toml
crates/coin-store/benches/: common.rs  contracts.rs  default.rs  entropy.rs  token.rs
crates/coin-store/migrations/: 001_initial.sql
crates/coin-store/src/: entry.rs  error.rs  executor.rs  filter.rs  lib.rs  store.rs
crates/coinselection/: Cargo.toml
crates/coinselection/src/: lib.rs  sqlite_db.rs  types.rs
crates/dcd_manager/: Cargo.toml
crates/dcd_manager/src/: manager.rs
crates/dcd_manager/src/manager/: common.rs  init.rs  types.rs
crates/dcd_manager/src/manager/handlers/: faucet.rs  maker_funding.rs  maker_init.rs  maker_settlement.rs  maker_termination_collateral.rs  maker_termination_settlement.rs  split_utxo.rs  taker_funding.rs  taker_settlement.rs  taker_termination_early.rs
crates/dex-cli/: Cargo.toml
crates/dex-cli/proptest-regressions/common/: keys.txt
crates/dex-cli/src/: cli.rs  error.rs  main.rs  utils.rs
crates/dex-cli/src/cli/: dex.rs  helper.rs  maker.rs  mod.rs  processor.rs  taker.rs
crates/dex-cli/src/common/: config.rs  keys.rs  mod.rs  settings.rs  store.rs  types.rs  utils.rs
crates/dex-cli/src/contract_handlers/: address.rs  common.rs  faucet.rs  maker_funding.rs  maker_init.rs  maker_settlement.rs  maker_termination_collateral.rs  maker_termination_settlement.rs  merge_tokens.rs  mod.rs  oracle_signature.rs  split_utxo.rs  taker_early_termination.rs  taker_funding.rs  taker_settlement.rs
crates/dex-nostr-relay/: Cargo.toml
crates/dex-nostr-relay/src/: error.rs  lib.rs  relay_client.rs  relay_processor.rs  types.rs
crates/dex-nostr-relay/src/handlers/: common.rs  get_events.rs  list_orders.rs  order_replies.rs  place_order.rs  reply_order.rs
crates/dex-nostr-relay/tests/: test_order_placing.rs  utils.rs
crates/global-utils/: Cargo.toml
crates/global-utils/src/: logger.rs
crates/lwk-utils/: Cargo.toml
crates/lwk-utils/src/: lib.rs  types.rs
crates/lwk-utils/tests/: faucet_contract.rs  p2pk_faucet.rs  testing_faucet.rs  utils.rs
crates/nostr_relay_connector/src/: relay_client.rs
crates/nostr_relay_processor/: Cargo.toml
crates/nostr_relay_processor/src/: handlers.rs  relay_processor.rs  types.rs
crates/nostr_relay_processor/src/handlers/: get_events.rs  list_orders.rs  place_order.rs  reply_order.rs
crates/nostr_relay_processor/tests/: test_order_placing.rs
crates/options-relay/: Cargo.toml  README.md
crates/options-relay/src/client/: publishing.rs  read_only.rs
crates/options-relay/src/events/: option_created.rs  option_offer_created.rs
crates/signer/: Cargo.toml
crates/signer/src/: lib.rs
nostr_options_cli/: Cargo.toml
nostr_options_cli/src/: cli.rs  error.rs  main.rs
nostr_options_cli/src/cli/: dex.rs  helper.rs  maker.rs  processor.rs  taker.rs
nostr_options_cli/src/common/: types.rs  utils.rs
nostr_options_cli/src/contract_handlers/: faucet.rs  maker_funding.rs  maker_init.rs  maker_settlement.rs  maker_termination_collateral.rs  maker_termination_settlement.rs  split_utxo.rs  taker_early_termination.rs  taker_funding.rs  taker_settlement.rs
