[package]
name = "nostr_options_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
nostr = { workspace = true }
global_utils = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
clap = {version = "4.5", features = ["derive"]}
dirs = "6.0"
