[package]
name = "coin-selection"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bincode = { workspace = true }
contracts = { workspace = true }
contracts-adapter = { workspace = true }
global-utils = { workspace = true }
serde = { workspace = true }
simplicity-lang = { workspace = true }
simplicityhl = { workspace = true }
simplicityhl-core = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
dotenvy = { workspace = true }