[package]
name = "dcd_manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
anyhow = { workspace = true }
elements = { workspace = true }
hex = { workspace = true }
simplicity-contracts = { workspace = true }
simplicity-lang = { workspace = true }
simplicityhl = { workspace = true }
simplicityhl-core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }