[package]
name = "simplicity-dex"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
nostr = { workspace = true }
global-utils = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
dex-nostr-relay = { workspace = true }

