[package]
name = "dex-cli"
version = "0.1.0"
edition = "2024"
description = "Simplicity helper CLI for Liquid testnet"
license = "MIT OR Apache-2.0"
readme = "README.md"
publish = false


[[bin]]
name = "simplicity-dex"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
nostr = { workspace = true }
global-utils = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
dex-nostr-relay = { workspace = true }

