[package]
name = "dex-cli"
version = "0.1.0"
edition = "2024"
description = "Simplicity helper CLI for Liquid testnet"
license = "MIT OR Apache-2.0"
readme = "README.md"
publish = false


[[bin]]
name = "simplicity-dex"
path = "src/bin/main.rs"

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true, features = ["env"]}
config = { workspace = true }
dex-nostr-relay = { workspace = true }
dirs = { workspace = true }
dotenvy = { workspace = true }
elements = { workspace = true }
futures-util = { workspace = true }
global-utils = { workspace = true }
hex = { workspace = true }
nostr = { workspace = true }
serde_json = { workspace = true }
contracts = { workspace = true }
contracts-adapter = { workspace = true }
simplicity-lang = { workspace = true }
simplicityhl = { workspace = true }
simplicityhl-core = { workspace = true }
sled = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
humantime = { version = "2.3.0"}

