[package]
name = "lwk-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
anyhow = { workspace = true }
config = { workspace = true }
contracts = { workspace = true }
contracts-adapter = { workspace = true }
dotenvy = { workspace = true }
elements = { workspace = true }
global-utils = { workspace = true }
hex = { workspace = true }
nostr = { workspace = true }
proptest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
simplicity-lang = { workspace = true }
simplicityhl = { workspace = true }
simplicityhl-core = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

lwk_common = { workspace = true }
lwk_wollet = { workspace = true }
lwk_signer = { workspace = true }