[package]
name = "nostr_relay_processor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
global_utils = { workspace = true }
nostr-sdk = { workspace = true }
nostr = { workspace = true }
nostr_relay_connector = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
simplicity-lang = { workspace = true }
simplicity-contracts = { workspace = true }
simplicityhl = { workspace = true }
simplicityhl-core = { workspace = true }
dcd_manager = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
